aux.css
/* ... */
.sec-il-step {
    grid-column: 2 / 5;
}

.sec-il-step img {
    max-width: 100px;
    margin-left: auto;
    margin-right: 0;
    display: block;
}

.sec-desc-step h3 {
    margin-top: 0;
    margin-bottom: 5px;
}

@media(max-device-width: 800px) {
    .sec-desc-step {
        grid-column: 1 / 26;
    }

    .sec-il-step {
        grid-column: 1 / 26;
    }

    .sec-il-step img {
        max-width: 150px;
        margin: auto;
        display: block;
    }

}
/*------------------------------------*\
    $FOOTER
\*------------------------------------*/
* {
    margin: 0;
    padding: 0;
    line-height: 1.5;
    font-family: "Source Sans Pro", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
    box-sizing: border-box;
}

footer {
    display: block;
}

footer img {
    padding: 0;
}

.gray-bg {
    background-color: var(--lightgrey);
}

.black-bg {
    background-color: var(--black);
}

.contr {
    max-width: 960px;
    margin: 0 auto;
}

.txt-center {
    text-align: center;
}

.margin-for-testing {
    margin-top: 200px;
}

/*
----------------------------
START -- NEW FOOTER
----------------------------
*/

.ft-mk {}


.ft-mk .ft-logo {
    max-width: 340px;
}

.ft-mk p {
    font-size: 17px;
}

.img-resp {
    width: 100%;
    height: auto;
}

.footer-padding {
    padding: 20px;
}

.emulated-flex-gap p {
    font-size: 17px;
}

.emulated-flex-gap {
    --gap: 20px;
    display: inline-flex;
    flex-wrap: wrap;
    margin: 20px * var(--gap)) 0;
    width: calc(100% + var(--gap));
}

.emulated-flex-gap div {
    flex-basis: calc(33% - var(--gap));
}

.emulated-flex-gap > * {
    margin: var(--gap) 0 0 var(--gap);
}

@media only screen and(max-width: 625px) {
    .ft-mk {
        justify-content: flex-end;
    }

    .ft-mk .b2 {
        flex-basis: calc(50% - var(--gap)) !important;
    }

    .ft-mk .c1 {
        align-self: flex-end !important;

        flex-basis: 100% !important;
    }
}


@media only screen and(max-width: 500px) {

    .ft-mk .b2 {
        flex-basis: 100% !important;
    }

    .ft-mk .c1 {

        flex-basis: 100% !important;
    }
}

@media only screen and(max-width: 400px) {

    .footer-notice:not(:first-child):not(:last-child) {
        padding-top: 0;
        padding-bottom: 0;
        margin-top: 0;
        margin-bottom: 0;
    }
}

.footer-notice {
    display: flex;
    flex-wrap: wrap-reverse;
    /* padding: 20px 20px; */
    justify-content: space-between;
    color: rgb(82, 82, 82);
    font-size: 14px;
}

.footer-notice-add {
    padding: 10px 20px;
}

.footer-notice span {
    margin: 20px;
}

.footer-notice span a {
    color: rgb(82, 82, 82);
    font-weight: 500;
}

.line-ft {
    /* margin: 0 20px;  */
    border-top: 1px solid rgb(204, 204, 204);
}

.light-footer {
    background-color: var(--lightgrey);
}

.dark-footer {
    background-color: var(--black);
}

.light-footer .white-logo {
    display: none;
}

.dark-footer .black-logo {
    display: none;
}

.dark-footer p {
    color: #e9e9e9;
}

.dark-footer .footer-notice {
    color: #bebebe;
}

.dark-footer .footer-notice a {
    color: #bebebe;
}

.dark-footer .line-ft {
    border: none;
    border-top: 1px solid rgb(115 115 115);
}

